{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 297,
  "lineage": "2d421b3a-74a3-4019-b2bc-e51252ef5ca3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linuxvm_nic_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-linuxvm_nic",
            "internal_domain_name_suffix": "dssa0h1effyuzoaxgrejdobk2h.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linuxvm_ip_1",
                "primary": true,
                "private_ip_address": "20.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/publicIPAddresses/aim-dev-linuxvm_publicip",
                "subnet_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/virtualNetworks/aim-dev-vnet_default/subnets/aim-dev-linuxsubnet"
              }
            ],
            "location": "eastus",
            "name": "aim-dev-linuxvm_nic",
            "private_ip_address": "20.0.2.4",
            "private_ip_addresses": [
              "20.0.2.4"
            ],
            "resource_group_name": "aim-dev-ajith_rg"
          },
          "dependencies": [
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windowsvm_nic_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-windowsvm_nic",
            "internal_domain_name_suffix": "dssa0h1effyuzoaxgrejdobk2h.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "windowsvm_ip_1",
                "primary": true,
                "private_ip_address": "20.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/publicIPAddresses/aim-dev-windowsvm_publicip",
                "subnet_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/virtualNetworks/aim-dev-vnet_default/subnets/aim-dev-winsubnet"
              }
            ],
            "location": "eastus",
            "name": "aim-dev-windowsvm_nic",
            "private_ip_address": "20.0.1.4",
            "private_ip_addresses": [
              "20.0.1.4"
            ],
            "resource_group_name": "aim-dev-ajith_rg"
          },
          "dependencies": [
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "linux_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-linuxvm_nic|/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg",
            "network_interface_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-linuxvm_nic",
            "network_security_group_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.linuxvm_nic_interface",
            "azurerm_network_security_group.linux_vmnic_nsg",
            "azurerm_network_security_rule.linux_nsg_rule_inbound",
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "windows_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-windowsvm_nic|/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg",
            "network_interface_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkInterfaces/aim-dev-windowsvm_nic",
            "network_security_group_id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.windowsvm_nic_interface",
            "azurerm_network_security_group.windows_vmnic_nsg",
            "azurerm_network_security_rule.windows_nsg_rule_inbound",
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "linux_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg",
            "location": "eastus",
            "name": "aim-dev-linuxvm_nic-nsg",
            "resource_group_name": "aim-dev-ajith_rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.linuxvm_nic_interface",
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "windows_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg",
            "location": "eastus",
            "name": "aim-dev-windowsvm_nic-nsg",
            "resource_group_name": "aim-dev-ajith_rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.windowsvm_nic_interface",
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "linux_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg/securityRules/linuxnsgrule-22",
            "name": "linuxnsgrule-22",
            "network_security_group_name": "aim-dev-linuxvm_nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.linuxvm_nic_interface",
            "azurerm_network_security_group.linux_vmnic_nsg",
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg/securityRules/linuxnsgrule-80",
            "name": "linuxnsgrule-80",
            "network_security_group_name": "aim-dev-linuxvm_nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.linuxvm_nic_interface",
            "azurerm_network_security_group.linux_vmnic_nsg",
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-linuxvm_nic-nsg/securityRules/linuxnsgrule-443",
            "name": "linuxnsgrule-443",
            "network_security_group_name": "aim-dev-linuxvm_nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.linuxvm_nic_interface",
            "azurerm_network_security_group.linux_vmnic_nsg",
            "azurerm_public_ip.linuxvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "windows_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg/securityRules/windowsnsgrule-3389",
            "name": "windowsnsgrule-3389",
            "network_security_group_name": "aim-dev-windowsvm_nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.windowsvm_nic_interface",
            "azurerm_network_security_group.windows_vmnic_nsg",
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg/securityRules/windowsnsgrule-80",
            "name": "windowsnsgrule-80",
            "network_security_group_name": "aim-dev-windowsvm_nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.windowsvm_nic_interface",
            "azurerm_network_security_group.windows_vmnic_nsg",
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/networkSecurityGroups/aim-dev-windowsvm_nic-nsg/securityRules/windowsnsgrule-443",
            "name": "windowsnsgrule-443",
            "network_security_group_name": "aim-dev-windowsvm_nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "aim-dev-ajith_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.windowsvm_nic_interface",
            "azurerm_network_security_group.windows_vmnic_nsg",
            "azurerm_public_ip.windowsvm_public_ip_address",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linuxvm_public_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/publicIPAddresses/aim-dev-linuxvm_publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.117.178.236",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "aim-dev-linuxvm_publicip",
            "resource_group_name": "aim-dev-ajith_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windowsvm_public_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/publicIPAddresses/aim-dev-windowsvm_publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.92.255.41",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "aim-dev-windowsvm_publicip",
            "resource_group_name": "aim-dev-ajith_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "linux_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.2.0/24",
            "address_prefixes": [
              "20.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/virtualNetworks/aim-dev-vnet_default/subnets/aim-dev-linuxsubnet",
            "name": "aim-dev-linuxsubnet",
            "resource_group_name": "aim-dev-ajith_rg",
            "virtual_network_name": "aim-dev-vnet_default"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "windows_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.1.0/24",
            "address_prefixes": [
              "20.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/virtualNetworks/aim-dev-vnet_default/subnets/aim-dev-winsubnet",
            "name": "aim-dev-winsubnet",
            "resource_group_name": "aim-dev-ajith_rg",
            "virtual_network_name": "aim-dev-vnet_default"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1f0da41c-2964-4c71-b817-344891b82ae7",
            "id": "/subscriptions/4477db70-a73b-4972-93d8-5feaed9f53b2/resourceGroups/aim-dev-ajith_rg/providers/Microsoft.Network/virtualNetworks/aim-dev-vnet_default",
            "location": "eastus",
            "name": "aim-dev-vnet_default",
            "resource_group_name": "aim-dev-ajith_rg",
            "tags": {
              "environment": "dev",
              "project": "aim"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    }
  ]
}